Fix a bug in PageLayout that causes jumping when a pane is loaded async into the pane

--- a/packages/react/src/PageLayout/PageLayout.module.css
+++ b/packages/react/src/PageLayout/PageLayout.module.css
@@ -471,7 +471,7 @@
       display: none;
     }
 
-    width: auto;
+    width: var(--pane-width-size);
     margin-top: 0 !important;
     margin-bottom: 0 !important;
 
